welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: not found: value va
va te faire foutre
^Array1:2: error: not found: value faire
va te faire foutre
      ^